--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+IN DIR[py]:
 1. merge_data.py: generate year data from original data for each day
 2. filter_data.py: filter invalid column and group data by model
 3. preprocess_data.py: filter invalid row, select features, generate train and test tags
